# evil

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs
tests/: evil.rs
