[package]
name = "evil"
description = "use ? as a shorthand for .unwrap()"
repository = "https://github.com/nik-rev/evil"
authors = ["Nik Revenco <pm@nikrev.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
keywords = ["development", "eyre", "anyhow", "error", "error-handling"]
categories = ["rust-patterns", "development-tools", "no-std", "no-std::no-alloc", "development-tools::debugging"]
edition = "2024"

[features]
default = ["std"]
std = []
